class ArmaMejora
{
private:
    /* data */
public:
    ArmaMejora(/* args */) {}
    ~ArmaMejora() {}
};