class Armadura
{
private:
    /* data */
public:
    Armadura(/* args */) {}
    ~Armadura() {}
};