class Avion
{
private:
    /* data */
public:
    Avion(/* args */) {}
    ~Avion() {}
};