class CajaMunicion
{
private:
    /* data */
public:
    CajaMunicion(/* args */) {}
    ~CajaMunicion() {}
};