class CocheMejora
{
private:
    /* data */
public:
    CocheMejora(/* args */) {}
    ~CocheMejora() {}
};