class Comida
{
private:
    /* data */
public:
    Comida(/* args */) {}
    ~Comida() {}
};