class Granada
{
private:
    /* data */
public:
    Granada(/* args */) {}
    ~Granada() {}
};