class LanzaMisil
{
private:
    /* data */
public:
    LanzaMisil(/* args */) {}
    ~LanzaMisil() {}
};