class Pistola
{
private:
    /* data */
public:
    Pistola(/* args */) {}
    ~Pistola() {}
};