class Prisionero
{
private:
    /* data */
public:
    Prisionero(/* args */) {}
    ~Prisionero() {}
};