class Regalo
{
private:
    /* data */
public:
    Regalo(/* args */) {}
    ~Regalo() {}
};