class RifledeAsalto
{
private:
    /* data */
public:
    RifledeAsalto(/* args */) {}
    ~RifledeAsalto() {}
};