class Soldado
{
private:
    /* data */
public:
    Soldado(/* args */) {}
    ~Soldado() {}
};