class Tanque
{
private:
    /* data */
public:
    Tanque(/* args */) {}
    ~Tanque() {}
};