class Teclado
{
private:
    /* data */
public:
    Teclado(/* args */) {}
    ~Teclado() {}
};