class Vehiculo
{
private:
    /* data */
public:
    Vehiculo(/* args */) {}
    ~Vehiculo() {}
};